11-Balancing/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sticky-demo-svc
  namespace: sticky-demo
spec:
  selector:
    app: sticky-demo
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
